EK/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kibana.leo.local`)
      kind: Rule
      services:
        - name: kibana
          port: 5601
  tls:
    secretName: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`elastic.leo.local`)
      kind: Rule
      services:
        - name: elasticsearch
          port: 9200
  tls:
    secretName: traefik
